[tool.poetry]
name = "crypto-rag"
version = "0.1.0"
description = "Agent-Based Graph RAG for Cryptocurrency Market Analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Core dependencies
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
python-dotenv = "1.0.1"
pydantic = "2.6.3"
pydantic-settings = "2.2.1"

# Security
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.9"

# Data processing
pandas = "2.1.4"
numpy = "1.26.4"
python-dateutil = "2.9.0"

# Database
asyncpg = "0.29.0"
redis = {extras = ["hiredis"], version = "5.0.1"}
psycopg2-binary = "2.9.9"

# Core AI/ML
together = "1.5.30"
langchain = {extras = ["llms"], version = "0.1.20"}
llama-index = {extras = ["llms-llama-cpp"], version = "0.10.68"}

# Optional Dependencies
ccxt = {version = "4.5.15", optional = true}
sentence-transformers = {version = "2.7.0", optional = true}
neo4j = {version = "5.14.1", optional = true}

# Utilities
loguru = "0.7.2"
greenlet = "3.0.3"
pydantic-extra-types = "2.1.0"
certifi = "2025.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
pytest-mock = "3.12.0"
pytest-xdist = "3.3.1"
httpx = "0.25.0"
freezegun = "1.2.2"
pytest-benchmark = "5.2.1"
types-python-jose = "^3.3.0"

[tool.poetry.extras]
full = ["ccxt", "sentence-transformers", "neo4j"]
test = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock", "pytest-xdist", "httpx", "freezegun", "pytest-benchmark"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml:coverage.xml"
asyncio_mode = "auto"
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["src"]
omit = [
    "**/__pycache__/*",
    "**/tests/*",
    "**/migrations/*",
    "**/alembic/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.html]
directory = "coverage_html"
title = "Crypto RAG Test Coverage"